# lean-experiment

./: .gitignore  README.md  US_GRAPHICS_STYLE_GUIDE.md  default  entries_schema.json  index.html  infotree_treemap.json  mathlib-vscode.html  mathlib.html  package-lock.json  package.json  tactics.html  tsconfig.app.tsbuildinfo  visualizer.html  vite.config.ts
.prompt/: .promptignore
api/: explain.ts
api/lean/: [...path].ts  _proxy.ts  health.ts
api/lean/session/: goals.ts  index.ts  open.ts
infotree_output/Mathlib/: InfoTreeExplorer.json  Init.json  Tactic.json
infotree_output/Mathlib/Algebra/: Exact.json  (+27 more)
lsp-bridge/: .env.example  README.md  package.json  server.mjs
schemas/: tree_schema.json
scripts/: build_mathlib_treemap.mjs  nginx_lean_proxy.conf  setup_vps.sh
scripts/infotree_exporter/: Main.lean  ffi.c  infotree_to_treemap.py  lake-manifest.json  lakefile.lean  run_batches.py
src/: App.css  App.tsx  index.css  mathlib-vscode.tsx  mathlib.tsx  tactics.tsx  visualizer.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src/assets/: mathlib_treemap.json  tactics.ts
src/components/: SiteHeader.tsx
src/hooks/: useThemeMode.ts
src/pages/: MathlibPage.tsx  TacticsPage.tsx  VisualizerPage.tsx
src/workers/: treemapWorker.ts
vscode-extension/: .vscodeignore  package-lock.json  package.json
vscode-extension/media/: index.html  mathlib-vscode.html  mathlib.html  tactics.html  visualizer.html
vscode-extension/scripts/: copy-webview.js
vscode-extension/src/: extension.ts
(+7280 files in other folders)
