[package]
name = "lean-experiment"
version = "0.0.0"
description = "Desktop build for the Mathlib treemap"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.5.3", features = [] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1.1"
walkdir = "2.5.0"
regex = "1.10.4"
open = "5.3.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
